--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+<p-card >
+  <div class="container">
+    <p-tabMenu [model]="items"></p-tabMenu>
+  </div>
+</p-card>
+
+<br/>
+<br/>
+
+<div class="container">
+  <p-card >
+      <router-outlet></router-outlet>
+  </p-card >
+</div>
