--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/primeicons/primeicons.css';
+@import '../node_modules/primeng/resources/themes/md-dark-indigo/theme.css';
+@import '../node_modules/primeng/resources/primeng.css';
+@import '../node_modules/primeflex/primeflex.css';
+
+body{
+    background-color: #161616;
+}
+
+.container {
+    width: 80%;
+    max-width: 1024px;
+    margin: 0 auto;
+}
