empty review module added

--- a/src/app/words/words.component.html
+++ b/src/app/words/words.component.html
@@ -1,4 +1,4 @@
-<p> Words to learn: 500, Words learned: 25, Words being learned: 10, Words due for revision: 10</p>
+<p> <strong>Words to learn:</strong> {{totalWords}}, <strong>Words learned:</strong> {{wordsLearned}}, <strong>Words being learned:</strong> {{wordsInProgress}}, <strong>Words due for revision:</strong> {{toReview}}</p>
 
 <p-button (click)="toggleInfo()" styleClass="p-button-sm p-button-info">{{ showInfo ? 'Hide' : 'Show' }} page details</p-button>
 
