--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,4 @@
-<p>about works!</p>
+<p>This demo project consists of routing for three pages with a data service that returns json data in lieu of an API call.</p>
+<p>Styling and UI components taken from the PrimeNG library.</p>
+<p>The project itself is based around elements of a spaced repetition language learning app with a page showing current user progress via word strength and when words are due for revision.</p>
+<p>The final page is an example of an interaction for learning / revising a word.</p>
