--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../node_modules/primeicons/primeicons.css';
-@import '../node_modules/primeng/resources/themes/md-dark-indigo/theme.css';
-@import '../node_modules/primeng/resources/primeng.css';
-@import '../node_modules/primeflex/primeflex.css';
+@import '~primeicons/primeicons.css';
+@import '~primeng/resources/themes/md-dark-indigo/theme.css';
+@import '~primeng/resources/primeng.css';
+@import '~primeflex/primeflex.css';
 
 body{
     background-color: #161616;
