minor style tweaks and alternative icon input added to work in stackblitz

--- a/src/app/words/words.component.html
+++ b/src/app/words/words.component.html
@@ -19,8 +19,10 @@
     <ng-template pTemplate="caption">
         
         <div style="text-align: right">
-            <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
-            <input type="text" pInputText size="50" placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+            <span class="p-input-icon-left">
+                <i class="pi pi-search"></i>
+                <input type="text" pInputText size="50" placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+            </span>
         </div>
     </ng-template>
     <ng-template pTemplate="header">
