--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~primeicons/primeicons.css';
-@import '~primeng/resources/themes/md-dark-indigo/theme.css';
+@import '~primeng/resources/themes/mdc-dark-indigo/theme.css';
 @import '~primeng/resources/primeng.css';
 @import '~primeflex/primeflex.css';
 
@@ -28,4 +28,5 @@ body{
     right: 0;
     padding-left: 4px;
     padding-right: 4px;
+    font-family: roboto;
 }
